--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "type-check": "tsc --noEmit",
+    "analyze": "npx vite-bundle-analyzer"
   },
   "dependencies": {
     "@stripe/stripe-js": "^2.4.0",
@@ -16,6 +18,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.48.2",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.20.1",
     "recharts": "^2.15.4",
     "zustand": "^4.4.7"
@@ -35,6 +38,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "vite": "^5.4.2",
+    "vite-bundle-analyzer": "^0.7.0"
   }
 }
