--- a/package.json
+++ b/package.json
@@ -9,36 +9,37 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "type-check": "tsc --noEmit",
-    "analyze": "npx vite-bundle-analyzer"
+    "analyze": "npx vite-bundle-analyzer",
+    "clean": "rm -rf node_modules package-lock.json && npm install"
   },
   "dependencies": {
-    "@stripe/stripe-js": "^2.4.0",
-    "@supabase/supabase-js": "^2.39.3",
+    "@stripe/stripe-js": "^4.8.0",
+    "@supabase/supabase-js": "^2.39.8",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.48.2",
+    "react-hook-form": "^7.53.2",
     "react-hot-toast": "^2.5.2",
-    "react-router-dom": "^6.20.1",
+    "react-router-dom": "^6.28.0",
     "recharts": "^2.15.4",
-    "zustand": "^4.4.7"
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
     "@types/dom-mediacapture-record": "^1.0.22",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.18",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.3.3",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.9.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.11",
-    "globals": "^15.9.0",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2",
+    "eslint-plugin-react-refresh": "^0.4.14",
+    "globals": "^15.12.0",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.14",
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.15.0",
+    "vite": "^5.4.10",
     "vite-bundle-analyzer": "^0.7.0"
   }
 }
