Implement LINGO.dev Compiler

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,6 @@ VITE_STRIPE_PUBLISHABLE_KEY=your_stripe_publishable_key
 # Stripe Secret Keys (for edge functions)
 STRIPE_SECRET_KEY=your_stripe_secret_key
 STRIPE_WEBHOOK_SECRET=your_stripe_webhook_secret
+
+# LINGO.dev Configuration
+VITE_LINGO_API_KEY=your_lingo_api_key
