--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview",
     "type-check": "tsc --noEmit",
     "analyze": "npx vite-bundle-analyzer",
-    "clean": "rm -rf node_modules package-lock.json && npm install"
+    "clean": "rm -rf node_modules package-lock.json && npm install",
+    "lingo": "lingo"
   },
   "dependencies": {
+    "@lingo.dev/client": "^1.0.5",
     "@stripe/stripe-js": "^4.8.0",
     "@supabase/supabase-js": "^2.39.8",
     "lucide-react": "^0.344.0",
@@ -26,6 +28,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@lingo.dev/node": "^1.0.5",
     "@types/dom-mediacapture-record": "^1.0.22",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
