--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "clean": "rm -rf node_modules package-lock.json && npm install"
   },
   "dependencies": {
+    "@lingo-dev/client": "^1.0.0",
     "@stripe/stripe-js": "^4.8.0",
     "@supabase/supabase-js": "^2.39.8",
-    "lingo.dev": "^1.0.0",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
+    "@lingo-dev/compiler": "^1.0.0",
     "@types/dom-mediacapture-record": "^1.0.22",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
